# pysfl

./: LICENSE  Node.py  README.md  SolarFarm.py  SolarRow.py  StripPoly.py  default_settings.yaml  environment.yaml  pyproject.toml
Old/: 001_plot.py  load_gis_data.py  load_gis_data_fixedroad.py  plot_histogram.py
new/: SolarFarm.py  SolarRow.py  StripPoly.py  default_settings.yaml  environment.yaml  old_road_code.py
python/: Constants.py  Enums.py  Farm.py  MultiPointHandler.py  POI.py  SolarRow.py  StripPoly.py  generate_datasets.py  inverterlocate.py  n10000_test.shape  paper_graphs.py  run_all_paper_data.py  sfl.py  sfl_generator.py  sfl_main.py  sfl_paper.py  sfl_paper_launcher.py  sflfarm.py  stat_review.py
src/pysfl/: Road.py  SolarFarm.py  SolarRow.py  StripPoly.py  __init__.py
src/pysfl/templates/: dxf_template.dxf
templates/: default_settings.yaml  dxf_template.dxf
